src/objects/datapro__Privacy_Detail__c.object
<CustomObject>
    <fields>
        <fullName>datapro__Additional_Info__c</fullName>
        <label>Additional Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>datapro__Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datapro__Channel__c</fullName>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datapro__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Privacy Detail</relationshipLabel>
        <relationshipName>ContactChildRecords</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>datapro__Count_of_Privacy__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of Privacy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>datapro__Created_Date_Field__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Field</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>datapro__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>datapro__Last_Modified_Date_Field__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date Field</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>datapro__Last_Month__c</fullName>
        <formula>IF(ISNULL( datapro__Withdrawn_date__c ),IF(MONTH(TODAY()) == 1, IF(MONTH( datapro__End_Date__c) == 12,&apos;Last Month&apos;,&apos;All&apos;),IF(MONTH( datapro__End_Date__c ) == MONTH(TODAY()) -1,&apos;Last Month&apos;,&apos;All&apos;)),IF(MONTH(TODAY()) == 1, IF(MONTH( datapro__Withdrawn_date__c) == 12,&apos;Last Month&apos;,&apos;All&apos;),IF(MONTH( datapro__Withdrawn_date__c ) == MONTH(TODAY()) -1,&apos;Last Month&apos;,&apos;All&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datapro__Lawful_Basis__c</fullName>
        <label>Lawful Basis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datapro__Name_Field__c</fullName>
        <formula>datapro__Contact__r.FirstName + &apos; &apos;+  datapro__Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datapro__Next_Month__c</fullName>
        <formula>IF(ISNULL( datapro__Withdrawn_date__c ),IF(MONTH(TODAY()) == 12, IF(MONTH( datapro__End_Date__c) == 1,&apos;Next Month&apos;,&apos;All&apos;),IF(MONTH( datapro__End_Date__c ) == MONTH(TODAY()) +1,&apos;Next Month&apos;,&apos;All&apos;)),IF(MONTH(TODAY()) == 12, IF(MONTH( datapro__Withdrawn_date__c) == 1,&apos;Next Month&apos;,&apos;All&apos;),IF(MONTH( datapro__Withdrawn_date__c ) == MONTH(TODAY()) +1,&apos;Next Month&apos;,&apos;All&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datapro__Preference_Center_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preference Center Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>datapro__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>datapro__This_Month__c</fullName>
        <formula>IF(ISNULL( datapro__Withdrawn_date__c ),IF(MONTH( datapro__End_Date__c ) == MONTH(TODAY()),&apos;This Month&apos;,&apos;All&apos;),IF(MONTH( datapro__Withdrawn_date__c ) == MONTH(TODAY()),&apos;This Month&apos;,&apos;All&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>This Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datapro__Withdrawn_date__c</fullName>
        <label>Withdrawn date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>datapro__hasFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasFlag</label>
        <type>Checkbox</type>
    </fields>
    <label>Privacy Detail</label>
    <listViews>
        <fullName>datapro__All</fullName>
        <columns>NAME</columns>
        <columns>datapro__Contact__c</columns>
        <columns>datapro__Category__c</columns>
        <columns>datapro__Channel__c</columns>
        <columns>datapro__Start_Date__c</columns>
        <columns>datapro__End_Date__c</columns>
        <columns>datapro__Additional_Info__c</columns>
        <columns>datapro__hasFlag__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PD-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Privacy Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>datapro__Invalid_date</fullName>
        <active>false</active>
        <errorConditionFormula>( datapro__Start_Date__c &gt;  datapro__End_Date__c  &amp;&amp;  datapro__Withdrawn_date__c  &lt;  datapro__Start_Date__c  )</errorConditionFormula>
        <errorMessage>Invalid Date !! Please Enter Valid date</errorMessage>
    </validationRules>
</CustomObject>